# html2text4llm

./: README.md  setup.cfg
html2text4llm/: __init__.py  config.py  elements.py
test/: test_html2text.py  test_memleak.py  test_newlines_on_multiple_calls.py
