[metadata]
name = html2text4llm
version = attr: html2text4llm.__version__
description = Turn HTML into equivalent Markdown-structured text.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ainbr/html2text4llm
author = Aaron Swartz
author_email = flrngel@gmail.com
maintainer = flrngel
maintainer_email = flrngel@gmail.com
license = GNU GPL 3
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
platform = OS Independent

[options]
zip_safe = False
packages = html2text4llm
python_requires = >=3.8

[options.entry_points]
console_scripts =
    html2text4llm = html2text4llm.cli:main

[options.package_data]
html2text4llm = py.typed

[flake8]
max_line_length = 88
extend-ignore = E203
extend-exclude = env/

[isort]
combine_as_imports = True
profile = black
extend_skip = env/

[mypy]
python_version = 3.8
